# dotfiles

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  config.nix  flake.nix  home.nix  justfile  shell.nix
.ai/: BUGS.md  DENDRITIC.md
.github/workflows/: trufflehog-scan.yml
_modules/_guipkgs/: default.nix  linux.nix
_modules/_nix/: default.nix
_modules/_systemd/: default.nix
dendritic/_aspects/: cli.nix  context.nix  gui.nix  home.nix  host.nix  mac.nix  nix.nix
dendritic/_common/: cli.nix  gui.nix  home.nix  host.nix  mac.nix  nix.nix
derivations/stata-nix/: default.nix
extraConfigs/: .bash_profile  .bashrc  .tmux.conf  .vimiumrc  .vimrc  minimal-vimrc.vim  plasma_settings.nix  scheme.kksrc  timewarrior.cfg
extraConfigs/.vim/: coc-settings.json
flake-modules/: formatter.nix
flake-modules/core/: options.nix
flake-modules/homeConfigurations/: macbookpro.nix  server.nix  x1carbon.nix
homedir/: .bash_profile  .bashrc  .dir_colors  .extra_profile  .muttrc  .notes  .taskrc  secret.age
homedir/.ssh/: x1.pub  (+10 more)
homedir/Documents/Scripts/inkscape-draw/: Pipfile  pyproject.toml
homedir/Documents/Scripts/inkscape-draw/inkscape-shortcut-manager/: config.py  main.py
lib/: default.nix  nixgl.nix
modules/: _nix-index.nix  _pkgs.nix  aliases.nix  bitwarden.nix  cli-utils.nix  cli_utils.nix  default.nix  direnv.nix  editor.nix  fonts.nix  formatter.nix  git.nix  gui-linux.nix  gui.nix  home.nix  hotkeys.nix  nix-index.nix  nix.nix  secrets.nix  services-linux.nix  setup.nix  shell.nix  ssh.nix  unhoused.nix  xdg.nix
mypkgs/: ask.sh  default.nix
(+178 files in other folders)
